[package]
name = "spectral"
version = "0.6.0"
authors = ["cfrancia <cfrancia@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Fluent test assertions"
repository = "https://github.com/cfrancia/spectral"
readme = "README.md"
keywords = ["fluent", "testing", "matchers", "assert", "assertions"]

[features]
default = ["num"]

[dependencies]
pretty_assertions = { version = "0.6" }
num = { version = "0.1.36", optional = true }
